tests/ui/type-alias-impl-trait/fallback.stderr
error[E0283]: type annotations needed
  --> $DIR/fallback.rs:23:27
   |
LL | fn unconstrained_foo() -> Wrapper<Foo> {
   |                           ^^^^^^^^^^^^ cannot infer type
   |
   = note: cannot satisfy `_: Copy`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
